compiler/e2e/test/snapshot/ir/expression/match/unreachable/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
warning: unreachable match arm
  ╭─ compiler/e2e/test/snapshot/ir/expression/match/unreachable/main.pnx:4:13
  │
4 │         true:  2  # unreachable
  │             ^^^^
  │
  = this match arm is unreachable due to prior arms covering all possible cases

warning: unreachable match arm
   ╭─ compiler/e2e/test/snapshot/ir/expression/match/unreachable/main.pnx:18:19
   │
18 │         case First:  3  # unreachable
   │                   ^^^^
   │
   = this match arm is unreachable due to prior arms covering all possible cases

warning: unreachable match arm
   ╭─ compiler/e2e/test/snapshot/ir/expression/match/unreachable/main.pnx:26:19
   │
26 │         case Third:  4 # unreachable
   │                   ^^^^
   │
   = this match arm is unreachable due to prior arms covering all possible cases

error: Compilation aborted due to 3 error(s)



stdout:
